src/snapshots/ampterm__app__Test 2a - Main Screen.snap
---
source: src/app.rs
expression: self.tui.backend()
---
"Ampterm 0.1.0 | Tasks: 0                                                                                                                                        "
"┌Playlist──────────────────────────────┐┌Playlist Queue────────────────────────────────────────────────────────────────┐┌Queue (0)─────────────────────────────┐"
"│>Album 1*                       0     ││                                                                              ││                                      │"
"│ Album 2*                       0     ││                                                                              ││                                      │"
"│ Album 3*                       0     ││                                                                              ││                                      │"
"│ Album 4*                       0     ││                                                                              ││                                      │"
"│ Album 5*                       0     ││                                                                              ││                                      │"
"│ Artist 1*                      0     ││                                                                              ││                                      │"
"│ Artist 2*                      0     ││                                                                              ││                                      │"
"│ Artist 3*                      0     ││                                                                              ││                                      │"
"│ Artist 4*                      0     ││                                                                              ││                                      │"
"│ Artist 5*                      0     ││                                                                              ││                                      │"
"│ Song 1*                        0     ││                                                                              ││                                      │"
"│ Song 2*                        0     ││                                                                              ││                                      │"
"│ Song 3*                        0     ││                                                                              ││                                      │"
"│ Song 4*                        0     ││                                                                              ││                                      │"
"│ Song 5*                        0     ││                              Choose a playlist!                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"│                                      ││                                                                              ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘└Remaining: 0 (00:00)──────────────────┘"
"┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌SPD┐┌VOL┐┌──────────────────────────────────────┐"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                               Select a music!                                              ││   ││   ││         Tap to BPM not bound!        │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"│                                                                                                            ││   ││   ││                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└1.0┘└050┘└──────────────────────────────────────┘"
"[NORMAL] Welcome to Ampterm                                                                                                                                     "
